<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_pw_title1"
        android:textColor="#383838"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#383838"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_pw_title2"
            android:textColor="#787878"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            android:gravity="center"
            android:padding="4dp"
            android:text="重新发送(59)"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_validate_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_y"
        android:hint="@string/validate_code_hint"
        android:padding="12dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_y"
        android:hint="@string/set_password_hint"
        android:inputType="textPassword"
        android:padding="12dp" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:layout_marginTop="12dp"
        android:background="@drawable/selector_red_btn"
        android:gravity="center"
        android:text="@string/btn_confirm_text"
        android:textColor="@color/white"
        android:textSize="18.0sp" />

</LinearLayout>