<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_pw_text_tips"
        android:textColor="#383838"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_mobile_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_y"
        android:hint="@string/username_hint"
        android:padding="12dp" />

    <Button
        android:id="@+id/btn_validate_code"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:layout_marginTop="12dp"
        android:background="@drawable/selector_red_btn"
        android:gravity="center"
        android:text="@string/get_validate_code"
        android:textColor="@color/white"
        android:textSize="18.0sp" />

</LinearLayout>