<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp" >

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_y"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_old_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/old_pw_hint"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="16sp" />

        <View style="@style/SlidingMenuItemDividerLineStyle" />

        <EditText
            android:id="@+id/et_new_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/old_new_hint"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="16sp" />

        <View style="@style/SlidingMenuItemDividerLineStyle" />

        <EditText
            android:id="@+id/et_confirm_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/old_confirm_hint"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_content"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/selector_red_btn"
            android:gravity="center"
            android:text="@string/btn_cancel_text"
            android:textColor="@color/white"
            android:textSize="18.0sp" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/selector_red_btn"
            android:gravity="center"
            android:text="@string/btn_confirm_text"
            android:textColor="@color/white"
            android:textSize="18.0sp" />
    </LinearLayout>

</RelativeLayout>